# Forge

Forge Task/: README.md  composer.json
Forge Task/config/: app.php  constants.php  l5-swagger.php
Forge Task/routes/: web.php
Forge-Task-News-Portal/: README.md  composer.json
Forge-Task-News-Portal/config/: l5-swagger.php
Forge-Task-News-Portal/routes/: web.php
Forge-Task-Roango-Express/: Franjo - express.postman_collection.json  README.md  app.js  package-lock.json  package.json  server.js
Forge-Task-Roango-Express/config/: db.config.js
Forge-Task-Roango-Express/controllers/: CompanyController.js  DepartmentController.js  UserController.js
Forge-Task-Roango-Express/models/: Company.js  CompanyDepartment.js  User.js  ViewCompanyDepartment.js
Forge-Task-Roango-Express/repositories/: CompanyRepository.js  DepartmentRepository.js  UserRepository.js
Forge-Task-Roango-Express/routes/: companyRoutes.js  departmentRoutes.js  userRoutes.js
Forge-Task-Roango-Express/services/: CompanyService.js  DepartmentService.js  UserService.js
Forge-Task-Roango-Express/tests/: company.test.js  department.test.js  user.test.js
Forge-Task-Roango-Express/validations/: companyValidations.js  departmentValidations.js  userValidations.js
Forge-Task-Roango-Express/versionHandlers/: CompanyVersionHandler.js  DepartmentsVersionHandler.js  UserVersionHandler.js
Forge-Task-Rust-Pokedex/: README.md  cargo.toml  diesel.toml
Forge-Task-Rust-Pokedex/bins/app/: Cargo.toml
Forge-Task-Rust-Pokedex/bins/app/src/: main.rs  web.rs
Forge-Task-Rust-Pokedex/bins/app/src/application/: configure.rs  mod.rs
Forge-Task-Rust-Pokedex/bins/app/src/application/api/: contract.rs  data.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
Forge-Task-Rust-Pokedex/bins/app/src/application/api/http/: handle_fetch_rand_pokemon.rs  handle_fetch_users_pokedex.rs  handle_pokemon_guess.rs  mod.rs
Forge-Task-Rust-Pokedex/bins/app/src/application/auth/: contract.rs  data.rs  domain.rs  infrastructure.rs  setup.rs  test.rs
Forge-Task-Rust-Pokedex/bins/app/src/application/auth/http/: handle_login.rs  handle_logout.rs  handle_refresh_token.rs  handle_verify_email.rs  mod.rs
Forge-Task-Rust-Pokedex/bins/app/src/application/registration/: contract.rs  data.rs  domain.rs  infrastructure.rs  setup.rs  test.rs
Forge-Task-Rust-Pokedex/bins/app/src/application/registration/http/: handle_create.rs  handle_resend_email.rs  mod.rs
Forge-Task-Rust-Pokedex/bins/app/src/middleware/: authenticate.rs
Forge-Task-Rust-Pokedex/libs/error/: Cargo.toml
Forge-Task-Rust-Pokedex/libs/error/src/: lib.rs
Forge-Task-Rust-Pokedex/libs/infrastructure/: Cargo.toml
Forge-Task-Rust-Pokedex/libs/infrastructure/src/: db.rs  lib.rs  schema.rs  sql_types.rs  state.rs
Forge-Task-Rust-Pokedex/libs/support/: Cargo.toml
Forge-Task-Rust-Pokedex/libs/support/src/: lib.rs
Forge-Task-Rust-Pokedex/libs/support/src/helpers/: auth.rs  http.rs  mailer.rs  mod.rs  pokemon.rs
Forge-Task-Rust-Pokedex/libs/support/src/services/seeder/: mod.rs  pokemon.rs
Forge-Task-Rust-Pokedex/libs/support/src/store/models/: action_token.rs  mod.rs  pokemon.rs  pokemon_ability.rs  pokemon_api_response.rs  pokemon_catches.rs  pokemon_stat.rs  pokemon_type.rs  user.rs  user_pokedex.rs
Forge-Task-Slack-Message/: Cargo.toml  README.md  diesel.toml
Forge-Task-Slack-Message/bins/app/: Cargo.toml
Forge-Task-Slack-Message/bins/app/src/: main.rs  web.rs
Forge-Task-Slack-Message/bins/app/src/application/: configure.rs  mod.rs
Forge-Task-Slack-Message/bins/app/src/application/slack_message/: contract.rs  data.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
Forge-Task-Slack-Message/bins/app/src/application/slack_message/http/: handle_create.rs  handle_index.rs  mod.rs
Forge-Task-Slack-Message/bins/app/src/application/templates/: index.html
Forge-Task-Slack-Message/libs/error/: Cargo.toml
Forge-Task-Slack-Message/libs/error/src/: lib.rs
Forge-Task-Slack-Message/libs/infrastructure/: Cargo.toml
Forge-Task-Slack-Message/libs/infrastructure/src/: db.rs  lib.rs  schema.rs  state.rs
Forge-Task-Slack-Message/libs/support/: Cargo.toml
Forge-Task-Slack-Message/libs/support/src/: lib.rs
Forge-Task-Slack-Message/libs/support/src/helpers/: http.rs
Forge-Task-Slack-Message/libs/support/src/store/models/: mod.rs  slack_message.rs
Forge-Task-Url-Shortener-Express/: README.md  package-lock.json  package.json  server.js
Forge-Task-Url-Shortener-Express/controllers/: authCrontroller.js  (+1 more)
docker-workshop/: README.md
(+341 files in other folders)
