[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"


[dependencies]
config = { path = "../config" }
error = { path = "../error" }

diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
tokio = { version = "1.29.1", features = ["full"] }
