[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
error = { path = "../error" }
serde = "1.0.171"
serde_json = "1.0.102"

r2d2 = ">= 0.8.2, < 0.9.0"

postgis = "0.9.0"
diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0-rc.0"
diesel_full_text_search = "2.1.0"
dotenv = "0.15.0"
