[package]
name = "support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde = "1.0.171"
serde_json = "1.0.102"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }


infrastructure = { path = "../infrastructure" }
